<resources>
    <string name="app_name">LupiApp</string>

    <string name="label_usuario">Correo Electrónico</string>
    <string name="label_password">Contraseña</string>
    <string name="label_start_session">Iniciar Sesión</string>
    <string name="label_nuevoUser"><u>Nuevo Usuario ? Registrarme Ahora</u></string>
    <string name="label_olvide_password">Olvide mi contraseña ?</string>
    <string name="label_bienvenida">Hola ! - Identifíquese para iniciar sesión</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pepe Luna</string>
    <string name="nav_header_subtitle">pepeluna@live.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar Sesión</string>
    <string name="descripcion_producto">Es un producto de prueba, estoy haciendo pruebas, ojalá si compile y pueda mimir temprano.</string>
    <string name="toast_ok">Excelente, Iniciaste Sesión</string>
    <string name="toast_error">Lo sentimos, ocurrió un error</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_shop">Mis Compras</string>
    <string name="menu_setting">Configuración</string>
    <string name="add_shop">Añadir al Carrito</string>
    <string name="menu_subtitle">Administración</string>
    <string name="menu_product">Productos</string>
    <string name="menu_category">Categorías</string>

    <string name="item_inicio_contactanos">Contáctanos</string>
    <string name="item_inicio_cerrar_sesion">Cerrar Sesión</string>
    <string name="register_toolbar">Registrar Usuario</string>
    <string name="register_title">Subir imagen para tu perfil</string>
    <string name="register_button">Subir Imagen</string>
    <string name="register_subtitle2">Registar Datos Personales</string>

    <string name="item_subtitle_categoires">Categoria 1</string>
    <string name="fragment_subtitle_categories">Categorias</string>
    <string name="fragment_product_item_name">Producto X</string>
    <string name="fragment_product_item_recommended">Producto Recomendado</string>
    <string name="fragment_product_title_recommended">Productos Recomendados</string>

    <string name="fragment_price">10.00</string>
    <string name="fragment_btn_order">Ordenar</string>
    <string name="fragment_toolbar_title">Productos por Categoria</string>
    <string name="fragment_title">Listado de Productos</string>

    <string name="item_compras_id">Codigo Compras : </string>
    <string name="item_compras_id_value">C0001</string>
    <string name="item_compras_date">Fecha Compras :  </string>
    <string name="item_compras_date_value">10/07/2021</string>
    <string name="item_compras_amount">Monto : </string>
    <string name="item_compras_amount_value">S/. 3500.00</string>
    <string name="item_compras_state">Estado del Pedido : </string>
    <string name="item_compras_state_value">Despachado y Enviando ...</string>

    <string name="item_compra_detalle_cod">Código Compras : </string>
    <string name="item_compra_detalle_cod_value">C0001 </string>
    <string name="item_compra_detalle_product">Producto : </string>
    <string name="item_compra_detalle_product_value">Producto 2</string>
    <string name="item_compra_detalle_quantity">Cantidad :  </string>
    <string name="item_compra_detalle_quantity_value">2</string>
    <string name="item_compra_detalle_price">Precio Unitario : </string>
    <string name="item_compra_detalle_price_value">S/. 25.00</string>

    <string name="activity_detalle_compras_toolbar">Detalle Compras</string>

    <string name="comprar_p">Comprar</string>
    <string-array name="tipoDoc">
        <item>DNI</item>
        <item>RUC</item>
        <item>CARNET EXT.</item>
        <item>PASAPORTE</item>
    </string-array>
    <string-array name="departamentos">
        <item>Ica</item>
        <item>Arequipa</item>
        <item>Cusco</item>
        <item>Lima</item>
    </string-array>
    <string-array name="provincias">
        <item>Ica</item>
        <item>Chincha</item>
        <item>Pisco</item>
        <item>Camaná</item>
        <item>La unión</item>
        <item>Caravelí</item>
        <item>Cuzco</item>
        <item>Urubamba</item>
        <item>Anta</item>
        <item>Lima Metropolitana</item>
        <item>Lima Provincia</item>
        <item>Barranca</item>

    </string-array>
    <string-array name="distritos">
        <item>Pachacutec</item>
        <item>La Tinguiña</item>
        <item>Yauca del Rosario</item>
        <item>Chincha Alta</item>
        <item>Chavin</item>
        <item>Chincha Baja</item>
        <item>Pisco</item>
        <item>Samuel Pastor</item>
        <item>Quilca</item>

        <item>Chorrillos</item>
        <item>Barranco</item>
        <item>San Borja</item>
        <item>Lurin</item>
        <item>Villa el Salvador</item>
        <item>Villa Maria del Triunfo</item>
    </string-array>
</resources>