<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvMisCompras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#2e2e2e"
        android:elevation="5dp"
        app:cardCornerRadius="10dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/txtNameCodPurchases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/san_francisco"
                        android:text="@string/item_compras_id"
                        android:textColor="#fff"
                        android:textSize="17sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtValueCodPurchases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@+id/txtNameCodPurchases"
                        android:fontFamily="@font/san_francisco"
                        android:text="@string/item_compras_id_value"
                        android:textColor="#F4EDED"
                        android:textSize="15sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/txtNameDatePurchases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/san_francisco"
                        android:text="@string/item_compras_date"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtValueDatePurchases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@+id/txtNameDatePurchases"
                        android:fontFamily="@font/san_francisco"
                        android:text="@string/item_compras_date_value"
                        android:textColor="#F4EDED"
                        android:textSize="15sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/txtNameAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/san_francisco"
                        android:text="@string/item_compras_amount"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtValueAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@+id/txtNameAmount"
                        android:fontFamily="@font/san_francisco"
                        android:text="@string/item_compras_amount_value"
                        android:textColor="#F4EDED"
                        android:textSize="15sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/txtNameOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/san_francisco"
                        android:text="@string/item_compras_state"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtValueOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@+id/txtNameOrder"
                        android:fontFamily="@font/san_francisco"
                        android:text="@string/item_compras_state_value"
                        android:textColor="#F4EDED"
                        android:textSize="15sp" />

                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>