<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#336b87"
        android:elevation="5dp"
        app:cardCornerRadius="10dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" >

            <ImageView
                android:id="@+id/imgProductoDetail"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:adjustViewBounds="true"
                android:padding="10dp"
                android:src="@drawable/food_img2"/>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/imgProductoDetail"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/txtNameCodDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/san_francisco"
                        android:text="@string/item_compra_detalle_cod"
                        android:textColor="#fff"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtValueCodDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@+id/txtNameCodDetail"
                        android:fontFamily="@font/san_francisco"
                        android:text="@string/item_compra_detalle_cod_value"
                        android:textColor="#F4EDED"
                        android:textSize="15sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtNameProductoDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/san_francisco"
                        android:text="@string/item_compra_detalle_product"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtValueProductoDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@+id/txtNameProductoDetail"
                        android:fontFamily="@font/san_francisco"
                        android:text="@string/item_compra_detalle_product_value"
                        android:textColor="#F4EDED"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtNameQuantityDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/san_francisco"
                        android:text="@string/item_compra_detalle_quantity"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtValueQuantityDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@+id/txtNameQuantityDetail"
                        android:fontFamily="@font/san_francisco"
                        android:text="@string/item_compra_detalle_quantity_value"
                        android:textColor="#F4EDED"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtNamePriceProductoDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/san_francisco"
                        android:text="@string/item_compra_detalle_price"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtValuePriceProductoDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@+id/txtNamePriceProductoDetail"
                        android:fontFamily="@font/san_francisco"
                        android:text="@string/item_compra_detalle_price_value"
                        android:textColor="#F4EDED"
                        android:textSize="15sp" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>