<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        android:elevation="5dp" >

        <ImageView
            android:id="@+id/imgProductoCategoria"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/food_img2" />

        <RelativeLayout
            android:layout_width="270dp"
            android:layout_height="110dp"
            android:layout_gravity="end"
            android:padding="10dp" >

            <TextView
                android:id="@+id/txtnameProductoCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/san_francisco"
                android:text="@string/fragment_product_item_name"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"/>
            
            <ImageView
                android:id="@+id/iv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtnameProductoCategoria"
                android:layout_marginTop="8dp"
                android:src="@drawable/rating_orange_small" />

            <TextView
                android:id="@+id/txtPrecioProductoCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv1"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/san_francisco"
                android:text="@string/fragment_price"
                android:textColor="#000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnOrdenarCategoria"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:backgroundTint="#FF8500"
                android:text="@string/fragment_btn_order"
                android:textColor="#fff"
                android:textSize="11sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>